--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@supabase/supabase-js": "^2.53.1",
     "@tanstack/react-query": "^5.84.1",
     "@vercel/analytics": "^1.5.0",
