--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-### 로컬 개발 파일 ###
-# Local development files (Supabase setup, migration scripts, etc.)
-local-dev/
-
 ### macOS ###
 # General
 .DS_Store
@@ -192,3 +188,8 @@ todo.md
 # 임시 파일
 temp/
 tmp/
+
+# 개발 파일
+.claude
+.cursor
+.mcp.json
