--- a/package.json
+++ b/package.json
@@ -31,38 +31,38 @@
     "clean": "rm -rf dist node_modules/.vite",
     "compile": "pnpm clean && pnpm build && pnpm preview",
     "lint": "biome lint --write",
-    "format": "biome format --write",
-    "check": "pnpm type-check && biome check --write",
     "type-check": "tsc --noEmit --project tsconfig.app.json",
+    "format": "biome format --write",
+    "check": "pnpm type-check && pnpm lint && pnpm format",
     "reporter": "biome check --reporter=summary"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@supabase/supabase-js": "^2.53.1",
-    "@tanstack/react-query": "^5.84.1",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@supabase/supabase-js": "^2.55.0",
+    "@tanstack/react-query": "^5.85.3",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "es-toolkit": "^1.39.8",
+    "es-toolkit": "^1.39.10",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.7.1",
+    "react-router-dom": "^7.8.1",
     "xss": "^1.0.15"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.1.3",
-    "@tailwindcss/vite": "^4.1.11",
-    "@types/react": "^19.1.9",
+    "@biomejs/biome": "2.2.0",
+    "@tailwindcss/vite": "^4.1.12",
+    "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
     "concurrently": "^9.2.0",
     "globals": "^16.3.0",
     "rollup-plugin-visualizer": "^6.0.3",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^4.1.12",
     "typescript": "~5.9.2",
-    "vite": "^7.1.0"
+    "vite": "^7.1.2"
   }
 }
