🔧 fix: projects 페이지 라우팅 규칙 수정 - /projects 경로 자체도 SPA 라우팅에서 제외하도록 정규식 개선 - projects$|projects/ 패턴으로 정확한 경로 매칭

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "destination": "/index.html"
     },
     {
-      "source": "/((?!projects/).*)",
+      "source": "/((?!projects$|projects/).*)",
       "destination": "/index.html"
     }
   ],
