🔧 fix: Vercel 리라이트 규칙 단순화

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,7 @@
 {
   "rewrites": [
     {
-      "source": "/projects/(.*)",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/((?!projects$|projects/).*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ],
