🔧 fix: framer-motion에서 motion으로 독립하여 패키지 추가 및 제거

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "es-toolkit": "^1.39.10",
-    "framer-motion": "^12.23.12",
+    "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
