--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-dialog": "^1.1.15",
-    "@supabase/supabase-js": "^2.57.0",
-    "@tanstack/react-query": "^5.85.9",
+    "@supabase/supabase-js": "^2.57.4",
+    "@tanstack/react-query": "^5.87.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "es-toolkit": "^1.39.10",
@@ -47,19 +48,20 @@
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
-    "xss": "^1.0.15"
+    "xss": "^1.0.15",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.0",
-    "@tailwindcss/vite": "^4.1.12",
+    "@biomejs/biome": "2.2.3",
+    "@tailwindcss/vite": "^4.1.13",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
     "concurrently": "^9.2.1",
     "globals": "^16.3.0",
     "rollup-plugin-visualizer": "^6.0.3",
-    "tailwindcss": "^4.1.12",
+    "tailwindcss": "^4.1.13",
     "typescript": "~5.9.2",
-    "vite": "^7.1.4"
+    "vite": "^7.1.5"
   }
 }
