--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@supabase/supabase-js": "^2.57.4",
+    "@tanstack/query-async-storage-persister": "^5.87.1",
     "@tanstack/react-query": "^5.87.1",
+    "@tanstack/react-query-persist-client": "^5.87.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "es-toolkit": "^1.39.10",
