--- a/package.json
+++ b/package.json
@@ -36,10 +36,14 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.87.4",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "es-toolkit": "^1.39.10",
     "motion": "^12.23.12",
     "react": "^19.1.1",
@@ -48,6 +52,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
     "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
     "xss": "^1.0.15",
     "zod": "^4.1.8"
   },
@@ -61,6 +66,7 @@
     "globals": "^16.4.0",
     "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.3.8",
     "typescript": "~5.9.2",
     "vite": "^7.1.5"
   }
