🐳 chore: 의존성 및 빌드 설정 업데이트 - 빌드/번들 및 TS 설정 업데이트 Ref #75

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -36,7 +36,8 @@
       "@hooks/*": ["hooks/*"],
       "@utils/*": ["utils/*"],
       "@services/*": ["services/*"],
-      "@lib/*": ["lib/*"]
+      "@lib/*": ["lib/*"],
+      "@i18n/*": ["i18n/*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"]
