--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "es-toolkit": "^1.39.10",
+    "i18next": "^25.5.2",
     "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.62.0",
+    "react-i18next": "^16.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
     "sonner": "^2.0.7",
