--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "clsx": "^2.1.1",
     "es-toolkit": "^1.39.10",
     "i18next": "^25.5.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
